Update Article “2023-07-10-wowo”

--- a/src/articles/2023-07-10-wowo.md
+++ b/src/articles/2023-07-10-wowo.md
@@ -10,4 +10,6 @@ Salah satu kucing kesayangan warga FIB dengan corak kuning-putih, yang mereka be
 ⚡Informasi Donasi⚡
 <a href="https://unpadsf.mayar.link/donate/bantu-kesembuhan-wowo-kucing-fib"> https://unpadsf.mayar.link/donate/bantu-kesembuhan-wowo-kucing-fib </a>
 
+Donasi sudah dituutp per tanggal 29 Juli 2023 dan digunakan untuk menutupi biaya obat-obatan dan klinik. Kami mengucapkan terima kasih untuk dukungan moril dan finansial para pembaca.
+
 <a href= "https://unpadstreetfeeding.medium.com/save-wowo-the-fib-cat-62687509bc4"> *Click Here* for the live blog.</a>
