--- a/src/articles/2024-08-09-faq.md
+++ b/src/articles/2024-08-09-faq.md
@@ -6,34 +6,37 @@ date: 2022-09-09T18:08:00.000Z
 tags:
   - post
 ---
-Dear readers and supporters, we understand that you may have questions about our organization and our work. To help answer your inquiries, we’ve compiled this FAQ. Please feel free to contact us if you need further answers!
+Para pembaca yang budiman, kami memahami bahwa Anda mungkin memiliki pertanyaan mengenai organisasi dan kegiatan kami. Untuk membantu menjawab pertanyaan tersebut, kami telah menyusun FAQ ini. Jangan ragu untuk menghubungi kami jika Anda membutuhkan jawaban lebih lanjut!
 
 <br>
 
-**Q1: Unpad Street Feeding itu apa?**\
-A:  Lorem ipsum
+**Q1: Street Feeding itu apa?**\
+A:  *Street feeding* adalah kegiatan memberikan pakan kepada hewan jalanan, baik kucing dan anjing. Sebenarnya, secara grammar dalam Bahasa Inggris kalimat *street feeding* itu sendiri kurang lengkap. Yang tepat adalah *street animal feeding.* Tetapi saat ini *street feeding* sendiri menjadi kegiatan yang luas, tidak hanya sekedar memberi pakan tetapi vitamin dan obat-obatan.
 
-**Q1: Apa misi utama Unpad Street Animal Friend?**\
-A:  Lorem ipsum
+**Q2: Apa misi utama Unpad Street Animal Friend?**\
+A:  Misi utama kami adalah bagaimana cara kami membantu hewan jalanan di kampus Unpad agar dapat melewati pandemi COVID-19 yang dimulai pada tahun 2020 melalui berbagai kegiatan. Saat itu, kampus ditutup dan ada beberapa dosen berinisiatif untuk menyelamatkan hewan jalanan di kampus. Dosen-dosen tersebut kemudian merekrut beberapa mahasiswa tingkat akhir berasal dari berbagai fakultas, terutama FK dan FMIPA, untuk melakukan tugas lapangan. Melihat keadaan pandemi membaik, seharusnya tugas kami akan segera paripurna pada pertengahan tahun 2023, mengingat itu adalah akhir masa studi mayoritas volunteer yang angkatan 2018 dan 2019. Beberapa juga mau Ko-Ass.
 
-**Q1: Bagaimana cara volunteering di sini?**\
-A:  Lorem ipsum
+**Q3: Bagaimana cara volunteering di sini?**\
+A:  Volunteering dibuka sepanjang waktu, di sini, teman-teman akan diajari bagaimana "taking care street animal the right way", "responsible pet ownership", pentingnya TNR, dan syukur-syukur mau mengadopsi salah satu kitten di kampus kita sebagai tradisi. Berminat? Perkenalkan dirimu di Instagram atau Facebook ya. Ada sertifikat volunteering juga *lho*, untuk SKPI di Paus.
 
-**Q1: Ada rekomendasi merk pakan?**\
-A:  Lorem ipsum
+**Q4: Apakah harus mahasiswa FK atau FMIPA biar bisa bergabung?**\
+A:  Tidak. Kegiatan ini dapat diikuti teman-teman mahasiswa aktif Unpad dan alumni.
 
-**Q1: Sastranekochan itu apanya Unpad Street Animal Friend?**\
-A:  Lorem ipsum
+**Q5: Sastranekochan itu apanya Unpad Street Animal Friend?**\
+A:  Sastranekochan adalah komunitas yang berasal dari FIB. Sastranekochan adalah sebuah produk dari *pet culture* di FIB yang , sedangkan kami adalah sebuah misi yang suatu saat harus selesai. Per artikel ini ditulis (29-08-2022), Sastranekochan sedang dalam keadaan hiatus yang disebabkan oleh pandemi. Kalau pembaca melihat kucing FIB yang sakit, lapor saja ke kita. Kita doakan semoga teman-teman Sastranekochan dapat segera kembali beraktifitas tahun depan.
 
-**Q1: Unpad Street Feeding itu apa?**\
-A:  Lorem ipsum
+**Q6: Apakah kalian sebuah proker BEM atau student branch?**\
+A:  Kami tidak memiliki afiliasi apapun dengan BEM Kema Unpad atau lembaga eksternal lainnya. Kami hadir dari dalam Unpad, oleh Unpad dan untuk Unpad itu sendiri.
 
 <br>
 
-**Bagian Dua: Bagaimana Cara Paling Baik Untuk Melapor Hewan Jalanan Kepada Kami?**
+**Bagian Dua: Bagaimana Cara Paling Baik Untuk Melaporkan Hewan Jalanan?**
 
 **Q1: Bagaimana cara melaporkan hewan jalanan sakit di lingkungan kampus?**\
-A:  Lorem ipsum
+A:  Teman-teman dapat melaporkannya kepada kami dengan mencantumkan foto, penjelasan lokasi, gejala yang dilihat. Dan, jangan lupa follow dulu, agar algoritma Instagram tidak memasukkan pesan *non-followers* ke hidden request sehingga tidak ada notifikasi.
+
+**Q1: Hey, ada kucing mati...**\
+A:  (UPDATE 08-10-2022) Syukurlah, dengan advokasi kita kepada Departemen K3L Unpad bulan lalu, mulai sekarang penanganan jasad hewan mati (termasuk kucing) di wilayah kampus dapat dilakukan oleh K3L langsung. Pembaca dapat mengunjungi Pos Satpam atau pramukantor terdekat untuk itu.
 
 **Q1: Hey, ini ada kitten??**\
 A:  Lorem ipsum
@@ -41,5 +44,6 @@ A:  Lorem ipsum
 **Q1: Hey, nampaknya ini kucing dibuang?**\
 A:  Lorem ipsum
 
-**Q1: Hey, ada kucing mati...**\
-A:  Lorem ipsum
+<br>
+
+**Bagian Tiga: Peraturan-Peraturan di Universitas Padjadjaran**
