Update Article “2024-08-09-faq”

--- a/src/articles/2024-08-09-faq.md
+++ b/src/articles/2024-08-09-faq.md
@@ -28,22 +28,43 @@ A:  Sastranekochan adalah komunitas yang berasal dari FIB. Sastranekochan adalah
 **Q6: Apakah kalian sebuah proker BEM atau student branch?**\
 A:  Kami tidak memiliki afiliasi apapun dengan BEM Kema Unpad atau lembaga eksternal lainnya. Kami hadir dari dalam Unpad, oleh Unpad dan untuk Unpad itu sendiri.
 
+**Q7: Apakah kalian adalah fasilitas kampus?**\
+A:  Kami bukan sebuah Satgas dan tidak melihat diri sebagai sebuah fasilitas kampus.  Kami juga bukan *animal shelter*. Unpad Street Animal Friend adalah inisiatif yang berbasis kegiatan sukarelawan yang memiliki batasan dalam kemampuan dan terikat pada aturan kampus. Mohon dipahami ya teman-teman.
+
+**Q8: Apakah ada grup pemilik hewan peliharaan se-Unpad?**\
+A:  Ya, tahun lalu kami memiliki program itu menggunakan LINE. Tujuannya adalah berbagi pengetahuan dan tips, berbagi informasi promosi dan program steril oleh pemerintah, dan berdiskusi. Sayang sekali ada kejadian vandalisme dan materi berbau pornografi oleh salah satu oknum anonim. Kemudian grup tersebut kami tutup.
+
 <br>
 
 **Bagian Dua: Bagaimana Cara Paling Baik Untuk Melaporkan Hewan Jalanan?**
 
 **Q1: Bagaimana cara melaporkan hewan jalanan sakit di lingkungan kampus?**\
-A:  Teman-teman dapat melaporkannya kepada kami dengan mencantumkan foto, penjelasan lokasi, gejala yang dilihat. Dan, jangan lupa follow dulu, agar algoritma Instagram tidak memasukkan pesan *non-followers* ke hidden request sehingga tidak ada notifikasi.
+A:  Segera laporkan kejadian tersebut kepada kami dengan menyertakan foto, lokasi kejadian dan gejala yang terlihat. Agar laporan dapat kami balas dengan cepat, jangan lupa ikuti akun kami terlebih dahulu. Dengan begitu, pesannya tidak akan masuk ke dalam *hidden request* Instagram Direct. Sampaikan laporan dengan sopan dan perkenalkan dirimu.
 
-**Q1: Hey, ada kucing mati...**\
-A:  (UPDATE 08-10-2022) Syukurlah, dengan advokasi kita kepada Departemen K3L Unpad bulan lalu, mulai sekarang penanganan jasad hewan mati (termasuk kucing) di wilayah kampus dapat dilakukan oleh K3L langsung. Pembaca dapat mengunjungi Pos Satpam atau pramukantor terdekat untuk itu.
+**Q2: Hey, ada kucing mati...**\
+A:  (UPDATE 08-10-2022) Dengan advokasi kita kepada Departemen K3L Unpad bulan lalu, mulai sekarang penanganan jasad hewan mati (termasuk kucing) di wilayah kampus dapat dilakukan oleh K3L langsung. Pembaca dapat mengunjungi Pos Satpam atau pramukantor terdekat agar segera dikuburkan. Advokasi ini dilakukan untuk menghindari kerusakan pipa air atau kabel bawah tanah akibat penggalian tanah yang dilakukan tanpa izin.
 
-**Q1: Hey, ini ada kitten??**\
-A:  Lorem ipsum
+**Q3: Hey, ini ada kitten?**\
+A:  Apabila kitten tesebut ditemukan seorang diri, cara terbaik adalah dengan menunggu induknya datang menjemputnya. Apabila pembaca kembali menemukannya tanpa induk keesokan harinya, dan sangat yakin dia sebatang kara, silahkan laporkan kepada kami. Pembaca menemukan kitten di sisi jalan? Cara terbaik membantunya adalah menghindarkan mereka dari jalanan dan letakkan di tempat yang lebih aman. Terima kasih telah membantunya!
 
-**Q1: Hey, nampaknya ini kucing dibuang?**\
-A:  Lorem ipsum
+**Q4: Hey, nampaknya ini kucing dibuang?**\
+A:  Stop Buang Kucing di Kampus! Sayangnya, masih ada saja orang yang tega membuang kucing peliharaan mereka di lingkungan kampus kita. Jika pembaca menemukan kucing dibuang yang kelihatan sakit, tolong laporkan ke kami. Hanya kucing yang sakit saja yang akan kami *rescue*.
 
 <br>
 
 **Bagian Tiga: Peraturan-Peraturan di Universitas Padjadjaran**
+
+**Q1: Bagaimana Unpad melihat hewan jalanan di kampus?**\
+A:  Menilik Peraturan Rektor No. 27 Tahun 2021 Tentang Pengendalian Spesies Invasif, kucing termasuk ke dalam kategori *domestic invasive species*. Spesies invasif adalah sebuah spesies yang menempati suatu habitat dalam jumlah banyak sehingga dapat menyebabkan kerugian ekologis, ekonomi, dan sosial. Peraturan tersebut juga mengatur soal kontrol populasi yang dapat dijadikan dasar melakukan TNR di lingkungan kampus.
+
+**Q2: Oh, ada peraturan Rektornya?**\
+A: Betul, peraturan Rektor itu keluar pada September 2021 untuk mendukung program SDG 15. Pembaca dapat mengunduhnya di sini : *<https://sdgs.unpad.ac.id/wp-content/uploads/2023/10/Rector-Regulation-of-Universitas-Padjadjaran-Number-27-of-2021-Concerning-Control-of-Invasive-Alien-Species.pdf>*
+
+
+
+<br>
+
+**Bagian Empat: Rekomendasi Pakan, Obat-Obatan, Toko atau Klinik**
+
+**Q1: Street Feeding itu apa?**\
+A:  *Street feeding* adalah kegiatan memberikan pakan kepada hewan jalanan, baik kucing dan anjing. Sebenarnya, secara grammar dalam Bahasa Inggris kalimat *street feeding* itu sendiri kurang lengkap. Yang tepat adalah *street animal feeding.* Tetapi saat ini *street feeding* sendiri menjadi kegiatan yang luas, tidak hanya sekedar memberi pakan tetapi vitamin dan obat-obatan.
