Update Article “2024-08-09-faq”

--- a/src/articles/2024-08-09-faq.md
+++ b/src/articles/2024-08-09-faq.md
@@ -23,7 +23,7 @@ A:  Volunteering dibuka sepanjang waktu, di sini, teman-teman akan diajari bagai
 A:  Tidak. Kegiatan ini dapat diikuti teman-teman mahasiswa aktif Unpad dan alumni.
 
 **Q5: Sastranekochan itu apanya Unpad Street Animal Friend?**\
-A:  Sastranekochan adalah komunitas yang berasal dari FIB. Sastranekochan adalah sebuah produk dari *pet culture* di FIB yang , sedangkan kami adalah sebuah misi yang suatu saat harus selesai. Per artikel ini ditulis (29-08-2022), Sastranekochan sedang dalam keadaan hiatus yang disebabkan oleh pandemi. Kalau pembaca melihat kucing FIB yang sakit, lapor saja ke kita. Kita doakan semoga teman-teman Sastranekochan dapat segera kembali beraktifitas tahun depan.
+A:  Sastranekochan adalah suatu komunitas yang berasal dari FIB, sedangkan kami adalah sebuah misi yang suatu saat harus selesai. Per artikel ini ditulis (29-08-2022), Sastranekochan sedang dalam keadaan hiatus yang disebabkan oleh pandemi. Kalau pembaca melihat kucing FIB yang sakit, lapor saja ke kita. Kita doakan semoga teman-teman Sastranekochan dapat segera kembali beraktifitas tahun depan.
 
 **Q6: Apakah kalian sebuah proker BEM atau student branch?**\
 A:  Kami tidak memiliki afiliasi apapun dengan BEM Kema Unpad atau lembaga eksternal lainnya. Kami hadir dari dalam Unpad, oleh Unpad dan untuk Unpad itu sendiri.
@@ -58,7 +58,7 @@ A:  Stop Buang Kucing di Kampus! Sayangnya, masih ada saja orang yang tega membu
 A:  Menilik Peraturan Rektor No. 27 Tahun 2021 Tentang Pengendalian Spesies Invasif, kucing termasuk ke dalam kategori *domestic invasive species*. Spesies invasif adalah sebuah spesies yang menempati suatu habitat dalam jumlah banyak sehingga dapat menyebabkan kerugian ekologis, ekonomi, dan sosial. Peraturan tersebut juga mengatur soal kontrol populasi yang dapat dijadikan dasar melakukan TNR di lingkungan kampus.
 
 **Q2: Oh, ada peraturan Rektornya?**\
-A: Betul, peraturan Rektor itu keluar pada September 2021 untuk mendukung program SDG 15. Pembaca dapat mengunduhnya di sini : *<https://sdgs.unpad.ac.id/wp-content/uploads/2023/10/Rector-Regulation-of-Universitas-Padjadjaran-Number-27-of-2021-Concerning-Control-of-Invasive-Alien-Species.pdf>*
+A: Betul, peraturan Rektor itu keluar pada September 2021 untuk mendukung program SDG 15. Semua terikat pada peraturan ini, termasuk kami. Pembaca dapat mengunduhnya di sini : *<https://sdgs.unpad.ac.id/wp-content/uploads/2023/10/Rector-Regulation-of-Universitas-Padjadjaran-Number-27-of-2021-Concerning-Control-of-Invasive-Alien-Species.pdf>*
 
 
 
@@ -66,5 +66,15 @@ A: Betul, peraturan Rektor itu keluar pada September 2021 untuk mendukung progra
 
 **Bagian Empat: Rekomendasi Pakan, Obat-Obatan, Toko atau Klinik**
 
-**Q1: Street Feeding itu apa?**\
-A:  *Street feeding* adalah kegiatan memberikan pakan kepada hewan jalanan, baik kucing dan anjing. Sebenarnya, secara grammar dalam Bahasa Inggris kalimat *street feeding* itu sendiri kurang lengkap. Yang tepat adalah *street animal feeding.* Tetapi saat ini *street feeding* sendiri menjadi kegiatan yang luas, tidak hanya sekedar memberi pakan tetapi vitamin dan obat-obatan.
+**Q1: Apa ada merk pakan yang direkomendasikan/endorse?**\
+A:  Demi memudahkan pembaca dalam mengikuti kegiatan feeding di kampus, kami merekomendasikan penggunaan pakan kucing Cat Choize atau Cat Choize+. Kedua merek ini dipilih berdasarkan ketersediaan dan harga yang terjangkau. Kami berkomitmen untuk tidak dipengaruhi oleh kepentingan komersial. Kami juga tidak menerima endorsement dari perusahaan manapun.
+
+**Q2: Kalian pakai obat-obatan apa saja?**\
+A:  Kami memakai beragam obat-obatan yang penggunaannya sudah didiskusikan dan disetujui. Kami belum bisa buka kepada publik daftar obat-obatan standar apa saja yang kami pakai karena kekhawatiran masyarakat awam yang belum sepenuhnya bijak dalam memakai antibiotik.
+
+**Q3: Ada daftar Petshop atau Klinik sekitar kampus?**\
+A:  Ya, ada. Dikarenakan mayoritas usaha dan klinik tersebut memakai nomor WhatsApp pribadi, kami kurang nyaman apabila menempatkannya di sini. Selain itu ada beberapa usaha yang sering berganti nomor. Pembaca silahkan menghubungi kami melalui Facebook, Instagram atau *E-mail* untuk meminta daftarnya.
+
+<br><br>
+
+***Total Seen: 481***
